iron-gallery-of-bravos/iron-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iron-db
spec:
  replicas: 1
  selector:
    matchLabels:
      db: mariadb
  template:
    metadata:
      labels:
        db: mariadb
      name: iron-db
    spec:
      containers:
      - name: iron-db
        image: kodekloud/irondb:2.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: db
      volumes:
      - name: db
        emptyDir: {}
