iron-gallery-of-bravos/iron-gallery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iron-gallery
spec:
  replicas: 1
  selector:
    matchLabels:
      run: iron-gallery
  template:
    metadata:
      labels:
        run: iron-gallery
      name: iron-gallery
    spec:
      containers:
      - name: iron-gallery
        image: kodekloud/irongallery:2.0
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 50m
            memory: 100Mi
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html/data
          name: config
        - mountPath: /usr/share/nginx/html/uploads
          name: images
      volumes:
      - name: config
        emptyDir: {}
      - name: images
        emptyDir: {}
