iron-gallery-of-bravos/iron-gallery-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iron-gallery-service
spec:
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30099
  selector:
    run: iron-gallery
  type: NodePort
